--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
   <div class="container">
     <form>
       <legend class="legend"><b>User Register</b></legend>
-      <fieldset>
+      <fieldset class="fieldset">
         <div>
-          <label for="username">Username</label>
-          <input type="text" placeholder="Register your username" id="username" autocomplete="off" autofocus>
+          <label class="form-label" for="username">Username</label>
+          <input class="form-input" type="text" placeholder="Register your username" id="username" autocomplete="off" autofocus>
         </div>
         <div>
-          <label for="password">Password</label>
-          <input type="text" placeholder="Register your password" id="password" autocomplete="off">
+          <label class="form-label" for="password">Password</label>
+          <input class="form-input" type="text" placeholder="Register your password" id="password" autocomplete="off">
         </div>
         <div>
-          <label for="repeat_password">Repeat Password</label>
-          <input type="text" placeholder="Repeat your password" id="repeat_password" autocomplete="off">
+          <label class="form-label" for="repeat_password">Repeat Password</label>
+          <input class="form-input" type="text" placeholder="Repeat your password" id="repeat_password" autocomplete="off">
         </div>
 
-        <button class="button">Send</button>
+        <button class="send-button">Send</button>
     </form>
   </div>
 
